objects/UNITY_Insurance__c.object
<CustomObject>
    <description>Capture customer and vendor insurance requirement and expiry</description>
    <fields>
        <fullName>UNITY_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Insurance</relationshipLabel>
        <relationshipName>Insurance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UNITY_Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UNITY_Insurance_Type__c</fullName>
        <label>Insurance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Automobile Liability</fullName>
                </value>
                <value>
                    <fullName>General Liability</fullName>
                </value>
                <value>
                    <fullName>Installation Floater Liability</fullName>
                </value>
                <value>
                    <fullName>Rented Equipment Liability</fullName>
                </value>
                <value>
                    <fullName>Umbrella Liability</fullName>
                </value>
                <value>
                    <fullName>Workers Compensation Liability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Insured_Amount__c</fullName>
        <label>Insured Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required?</label>
        <type>Checkbox</type>
    </fields>
    <label>Insurance</label>
    <nameField>
        <displayFormat>INS-{0000}</displayFormat>
        <label>Insurance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance</pluralLabel>
    <recordTypes>
        <fullName>UNITY_Insurance</fullName>
        <active>true</active>
        <label>UNITY_Insurance</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>